# ignition_workspace

./: .gitignore  =1.2.0  INTEGRATION_SUMMARY.md  README.md  TOPIC_CORRECTIONS_SUMMARY.md  WAITACTION_IMPLEMENTATION_SUMMARY.md  bt_diagnostic.py  camera_setup.py  check_topics.py  compact_action_tree.tex  cpu_monitor.py  debug_launcher.py  debug_robot_subscriptions.py  debug_ros2_package.sh  diagnostic_launcher.py  direct_test_log.txt  improved_reset_patch.py  plot_trajectories.py  rectangle_data.json  run_examples.md  simple_event_test.py  simple_parcel_test.py  source_and_launch.sh  system_monitor.py  system_status.sh  test_both_nodes.sh  test_callbacks.py  test_full_system.py  test_integrated_system.py  test_pick_object.py  test_push_behavior.py  test_replan_behavior.py  test_replan_path.py  test_subscriptions.py  test_timer_frequency.py  test_trajectory_structure.py  test_wait_action.py  test_wifi_complete.py  trajectory_plotter.py  tree_reset_controller.py  (+1 more)
.devcontainer/: devcontainer.json  dockerfile
bag_turtlebot/: readme.md
bag_turtlebot/bag_turtlebot_MoveObj_tb0/: bag_turtlebot_MoveObj_tb0_0.db3  metadata.yaml
config/: config.yaml  config_loader.py
data/: AssignmentResult3experi.json  Enviro_experiments.json  Estimated_matrices_experi.npz  Graph_experi.json  Graph_new_experi.json  Graph_new_maze_5.json  Graph_new_simple_maze.json  Graph_new_simulation.json  InitialGuess3experi.json  Normalization3_experi.json  Normalization_planning3_experi.json  Optimization_GA_3_IG_normaexperi.json  Optimization_deltaT_3experi.json  Optimization_withSC_path3experi.json  Trajectory_simulation.json  WayPointFlag3experi.json  environment.json  environment_experi.json  relay_points.json  safe_corridors_experi_N3.json  tb0_DiscreteTrajectory.json  tb0_Trajectory.json  tb1_DiscreteTrajectory.json  tb1_Trajectory.json  tb2_DiscreteTrajectory.json  tb2_Trajectory.json  tb3_DiscreteTrajectory.json  tb3_Trajectory.json  tb4TimeAsssignment_DiscreteTrajectory.json  tb4_DiscreteTrajectory.json  tb4_Trajectory.json  visualization_organization.json
data/experi/: Waypoints.json  complete_trajectory_parameters_experi.json  full_trajectory.json  robot_0_trajectory_parameters_experi.json  robot_1_trajectory_parameters_experi.json  robot_2_trajectory_parameters_experi.json  tb0_Trajectory.json  tb1_Trajectory.json  tb2_Trajectory.json
data/maze_5/: Waypoints.json  (+14 more)
src/behaviour_tree/: CMakeLists.txt  README.md  package.xml  setup.py
src/behaviour_tree/behaviour_tree/: config_loader.py  demo_bt.py  my_behaviour_tree.py  my_behaviour_tree_modular.py  optimized_tree.py  simple_tree.py  snapshot_streams_demo.py
src/behaviour_tree/behaviour_tree/behaviors/: Pickup.py  ReplanPath_behaviour.py  Replan_behaviors.py  Replan_behaviors_optimized.py  __init__.py  basic_behaviors.py  event_driven_behaviors.py  managed_behavior_base.py  manipulation_behaviors.py  movement_behaviors.py  mpc_controller.py  subscription_manager.py  tree_builder.py
src/behaviour_tree/launch/: behavior_system.launch.py  demo_multi_robot.launch.py  multi_relay_maze_modular.launch.py  multi_robot_behavior_trees.launch.py  multi_robot_behaviour_modular.launch.py  robot0_behaviour.launch.py  robot1_behaviour.launch.py  robot2_behaviour.launch.py  single_robot_behavior_tree.launch.py
src/behaviour_tree/resource/: demo_tree.xml
src/behaviour_tree/scripts/: Behaviour_tree.py  Follow_controller.py  Pickup_controller.py
src/camera_mocap_launcher/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/camera_mocap_launcher/camera_mocap_launcher/: camera_node.py  plot_path_on_video.py  rectangle_detector.py
src/camera_mocap_launcher/launch/: camera_mocap_with_vrpn.launch.py  camera_node.launch  camera_rectangle_python_launch.py
src/camera_mocap_launcher/resource/: camera_mocap_launcher
src/camera_mocap_launcher/src/: calibaration.py  camera_node.py  capture_Photo.py
src/epuck_driver_ros2/: README.md  package.xml  setup.py
src/epuck_driver_ros2/config/: epuck_driver.yaml  robot0_ns.yaml  robot1_ns.yaml  robot2_ns.yaml
src/epuck_driver_ros2/epuck_driver_ros2/: __init__.py  ePuck.py  epuck_driver_ros2.py  keyboard_control.py  simple_cmd_publisher.py
src/epuck_driver_ros2/launch/: epuck_driver.launch.py  three_robots.launch.py
src/epuck_driver_ros2/resource/: epuck_driver_ros2
src/mpc_test_package/: README.md  package.xml  setup.py
src/mpc_test_package/launch/: mpc_test.launch.py  mpc_with_rviz.launch.py  test_cmd_vel.launch.py
src/mpc_test_package/mpc_test_package/: __init__.py  cmd_vel_publisher.py  mobile_robot_mpc.py  mpc_test_node.py
src/mpc_test_package/resource/: mpc_test_package
src/mpc_test_package/rviz/: cmd_vel_test.rviz  mpc_visualization.rviz
src/pushing_controller/: CMakeLists.txt  package_fixed.xml
src/pushing_controller/config/: controller_config.yaml  data_recording.yaml  data_recording_turtle.yaml
src/pushing_controller/include/codegen/: PushingMPClib.h  PushingMPClib_types.h  buildInfo.mat  mpc.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
src/pushing_controller/include/estimator/: kalman_ang.hpp  kalman_lin.hpp
src/pushing_controller/include/pushing_controller/: pushing_controller.hpp  utils.hpp
src/pushing_controller/launch/: MoveRob_multi.launch.py  Pushing_multi.launch.py  controller.launch.py  debug.launch  debug_matlab.launch  launch_epuck.launch  launch_epuck_sim.launch  launch_sim.launch  launch_turtle.launch
src/pushing_controller/rviz/: epuck.rviz  epuck_sim.rviz  tb0.rviz  test.rviz  test_tb0.rviz
src/pushing_controller/scripts/: MPCcontroller.py  Pushing_trajectory_define.py  Robot_trajectory_follow.py
src/pushing_controller/src/: pushing_controller.cpp  pushing_controller_withoutObst.cpp  ros_main.cpp
src/pushing_controller/src/codegen/: PushingMPClib.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
src/pushing_controller/src/estimator/: kalman_ang.cpp  kalman_lin.cpp
src/visualization/: CMakeLists.txt  coordinate_transform.py  entry_points.txt  package.xml  setup.py
src/visualization/visualization/: __init__.py  pose_plotter.py
(+247 files in other folders)
