<?xml version="1.0"?>
<package format="2">
  <name>camera_mocap_launcher</name>
  <version>0.0.1</version>
  <description>Camera and mocap launcher package</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
    <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
