<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>camera_mocap_launcher</name>
  <version>0.0.1</version>
  <description>Camera and mocap launcher package</description>
  <maintainer email="hui1225.zhi@connect.polyu.hk">ZHIHUI1225</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
