<?xml version="1.0"?>
<package format="2">
  <name>visualization</name>
  <version>0.0.0</version>
  <description>ROS2 package to visualize camera node poses</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>numpy</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
